Using Cloud Sleuth

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,7 @@
 server.port=8024
 
 spring.application.name=PricingMS
+
+server.servlet.context-path=/pricingMS
+logging.level.org.springframework.cloud.sleuth=DEBUG
+
