--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,3 +5,4 @@ spring.application.name=PricingMS
 server.servlet.context-path=/pricingMS
 logging.level.org.springframework.cloud.sleuth=DEBUG
 
+spring.zipkin.base-url=http://localhost:9411
