--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,3 +6,10 @@ server.servlet.context-path=/pricingMS
 logging.level.org.springframework.cloud.sleuth=DEBUG
 
 spring.zipkin.base-url=http://localhost:9411
+
+
+
+#Eureka Configs
+eureka.client.serviceUrl.defaultZone = http://localhost:8031/eureka
+eureka.client.register-with-eureka=true
+eureka.client.fetch-registry=true
